Add soft delete for project